--- a/articles/batch-ai/TOC.yml
+++ b/articles/batch-ai/TOC.yml
@@ -2,6 +2,8 @@
   href: index.yml
 - name: Overview
   items:
+  - name: What's happening to Batch AI?
+    href: whats-happening-to-batch-ai.md
   - name: What is Batch AI?
     href: overview.md
 - name: Quickstarts
