adding live topics

--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -66,6 +66,13 @@
       href: design-multi-drm-system-with-access-control.md
   - name: Streaming live 
     href: live-streaming-overview.md
+    items:
+    - name: States and billing
+      href: live-event-states-billing.md
+    - name: Types comparison
+      href: live-event-types-comparison.md
+    - name: Latency
+      href: live-event-latency.md
 - name: How-to guides
   items:
   - name: Migrate from v2 to v3
