--- a/articles/sql-database/sql-database-paas.yml
+++ b/articles/sql-database/sql-database-paas.yml
@@ -42,7 +42,7 @@ sections:
       - title: Scale resources
         href: /azure/sql-database/sql-database-scale-resources
         html: <p>Azure SQL Database enables you to easily add more resources (CPU, memory, storage) without long provisioning, or to quickly release resources to lower the cost.</p>
-- title: Step-by-Step tutorials and learning materials
+- title: More resources
   items:
   - type: paragraph
     text: Azure SQL Database provides a set of additional built-in features that you can use to more easily manage your databases.
@@ -50,6 +50,6 @@ sections:
     style: ordered
     items:
     - html: <a href="">Advanced security</a> detect threats and vunerabilities in your databases and enables you to secure your data.
-    - html: <a href="">Automatic tuning</a> analyzes your workload provides you recommendation that can optimize performance of your applications by adding indexes, removing unused indexes, and automatically fix query plan issues.
-    - html: <a href="">Built-in monitoring</a> enables you to get the insight into performance of your database and workload and troubleshoot issues.
-    - html: <a href="/azure/sql-database/sql-database-intelligent-insights">Built-in intelligence</a> automatically identifies the potential issues in your workload and provides you recommendations how to fix the problems.
+    - html: <a href="">Automatic tuning</a> analyzes your workload and provides you the recommendations that can optimize performance of your applications by adding indexes, removing unused indexes, and automatically fixing query plan issues.
+    - html: <a href="">Built-in monitoring</a> enables you to get the insights into performance of your databases and workload, and troubleshoot the performance issues.
+    - html: <a href="/azure/sql-database/sql-database-intelligent-insights">Built-in intelligence</a> automatically identifies the potential issues in your workload and provides you the recommendations that can help you to fix the problems.
