--- a/articles/sql-database/sql-database-paas.yml
+++ b/articles/sql-database/sql-database-paas.yml
@@ -14,11 +14,11 @@ metadata:
   ms.topic: overview
   ms.date: 11/11/2018
   ms.author: jovanpop-msft
-abstract:
-  description: Azure SQL Database is a fully managed Platform as a Service (PaaS) Database Engine that handles most of the database management functions such as upgrading, patching, backups, monitoring without user involvement. PaaS database that is always running on the latest stable version of SQL Server Database Engine and patched OS with 99.99% availability. PaaS capabilities that are built-in into Azure SQL database enable you to focus on the domain specific database administration and optimization activities that are critical for your business.
 sections:
 
 - items:
+  - type: paragraph
+    text: Azure SQL Database is a fully managed Platform as a Service (PaaS) Database Engine that handles most of the database management functions such as upgrading, patching, backups, monitoring without user involvement. PaaS database that is always running on the latest stable version of SQL Server Database Engine and patched OS with 99.99% availability. PaaS capabilities that are built-in into Azure SQL database enable you to focus on the domain specific database administration and optimization activities that are critical for your business.
   - type: list
     style: cards
     className: cardsM
