--- a/articles/active-directory/hybrid/TOC.yml
+++ b/articles/active-directory/hybrid/TOC.yml
@@ -202,7 +202,7 @@
       href: how-to-connect-health-sync.md
     - name: Use Azure AD Connect Health with AD DS
       href: how-to-connect-health-adds.md
-    - name: Health sevice data out-of-date
+    - name: Health service data out-of-date
       href: how-to-connect-health-data-freshness.md
     - name: Diagnose duplicate attribute sync errors
       href: how-to-connect-health-diagnose-sync-errors.md
