--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -969,7 +969,7 @@
   - name: Feature and API Retirement 
     items:
     - name: Retirement of classic APIs 
-      href: ../monitoring-and-diagnostics/classic-api-retirement-metrics-autoscale.md?toc=/azure/azure-monitor/toc.json 
+      href: ./platform/classic-api-retirement-metrics-autoscale.md 
     - name: Retirement of classic alerting & monitoring 
       href: ../monitoring-and-diagnostics/monitoring-classic-retirement.md?toc=/azure/azure-monitor/toc.json
     - name: Extend alerts from Log Analytics to Azure
