--- a/articles/sql-database/sql-database-paas.yml
+++ b/articles/sql-database/sql-database-paas.yml
@@ -49,7 +49,7 @@ sections:
   - type: list
     style: ordered
     items:
-    - html: <a href="">Advanced security</a> detects threats and vunerabilities in your databases and enables you to secure your data.
-    - html: <a href="">Automatic tuning</a> analyzes your workload and provides you the recommendations that can optimize performance of your applications by adding indexes, removing unused indexes, and automatically fixing the query plan issues.
-    - html: <a href="">Built-in monitoring capabilities</a> enables you to get the insights into performance of your databases and workload, and troubleshoot the performance issues.
+    - html: <a href="/azure/sql-database/sql-advanced-threat-protection">Advanced security</a> detects threats and vunerabilities in your databases and enables you to secure your data.
+    - html: <a href="/azure/sql-database/sql-database-automatic-tuning">Automatic tuning</a> analyzes your workload and provides you the recommendations that can optimize performance of your applications by adding indexes, removing unused indexes, and automatically fixing the query plan issues.
+    - html: <a href="/azure/log-analytics/log-analytics-azure-sql">Built-in monitoring capabilities</a> enable you to get the insights into performance of your databases and workload, and troubleshoot the performance issues.
     - html: <a href="/azure/sql-database/sql-database-intelligent-insights">Built-in intelligence</a> automatically identifies the potential issues in your workload and provides you the recommendations that can help you to fix the problems.
