--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -209,6 +209,8 @@
   - name: Security   
     items:
     - name: Security
+      href: sql-database-security-index.yml
+    - name: Overview
       href: sql-database-security-overview.md
     - name: Advanced Threat Protection
       items:
