Minor text update

--- a/articles/sql-database/sql-database-security-index.yml
+++ b/articles/sql-database/sql-database-security-index.yml
@@ -29,7 +29,7 @@ sections:
         html: <p>Azure SQL Database provides a set of advanced security features that can help you make your data secure.</p>
       - title: Threat protection
         href: /azure/sql-database/sql-advanced-threat-protection
-        html: <p>Advanced security capabilities such as Data Discovery & Classification, Vulnerability Assessment, and Threat Detection.</p>
+        html: <p>Learn more about Data Discovery & Classification, Vulnerability Assessment, and Threat Detection.</p>
       - title: Vulnerability assessment
         href: /azure/sql-database/sql-vulnerability-assessment
         html: <p>Vulnerability assessment enables you to discover, track, and remediate potential database vulnerabilities.</p>
