--- a/articles/sql-database/sql-database-managed-instance-index.yml
+++ b/articles/sql-database/sql-database-managed-instance-index.yml
@@ -49,7 +49,7 @@ sections:
         href: /azure/dms/tutorial-sql-server-to-managed-instance
         html: <p>Migrate a fleet of databases with minimal downtime using Database Migration Service.</p>
       - title: Pricing
-        href: /pricing/hybrid-benefit/
+        href: https://azure.microsoft.com/pricing/hybrid-benefit/
         html: <p>Save up to 40% with Azure Hybrid Benefit (AHB) with your existing on-premises licences.</p>
       - title: PaaS capabilities
         href: /azure/sql-database/sql-database-paas
@@ -118,7 +118,7 @@ sections:
     - html: Verify that your database can be migrated using <a href="https://www.microsoft.com/download/details.aspx?id=53595">Data Migration Asisstant</a> or <a href="https://blogs.msdn.microsoft.com/datamigration/2018/08/06/release-database-experimentation-assistant-dea-v2-6/">Database Experimentation Assistant</a>.
     - html: Bring your databases to Managed Instance using <a href="/azure/sql-database/sql-database-managed-instance-get-started-restore">Native restore</a> or <a href="/azure/dms/tutorial-sql-server-managed-instance-online">Data Migration Service</a>.
     - html: Move your SSIS packages to <a href="/azure/data-factory/tutorial-deploy-ssis-packages-azure">Azure Data Factory</a>, SSAS tabular models to <a href="https://azure.microsoft.com/resources/videos/azure-analysis-services-moving-models/">Azure Analysis Service</a>, and SSRS reports to <a href="https://docs.microsoft.com/business-applications-release-notes/april18/power-bi/service/sql-server-reporting-services-ssrs-reports-power-bi-premium">PowerBI Premium</a>.
-    - html: Best practices and recommendations for <a href="https://www.youtube.com/watch?v=vO6k05Ox1iI">securing your instance</a>.
+    - html: Find the best practices and recommendations for <a href="https://www.youtube.com/watch?v=vO6k05Ox1iI">securing your instance</a>.
     - html: Distribute your data using <a href="/azure/sql-database/replication-with-sql-database-managed-instance">Transactional replication</a>.
 - title: Reference
   items:
