--- a/articles/sql-database/sql-database-managed-instance-index.yml
+++ b/articles/sql-database/sql-database-managed-instance-index.yml
@@ -3,7 +3,7 @@ documentType: LandingData
 title: Azure SQL Database Managed Instance
 metadata:
   document_id: 36d89c48-3646-380e-34a0-ae3ac62e2641
-  title: Azure SQL Database Documentation - Tutorials, API Reference
+  title: Azure SQL Database Managed Instance Documentation - Tutorials, API Reference
   meta.description: Learn how to use Azure SQL Database Managed Instance.
   services: sql-database
   author: jovanpop-msft
@@ -15,7 +15,7 @@ metadata:
   ms.date: 11/11/2018
   ms.author: jovanpop-msft
 abstract:
-  description: Azure SQL Database Managed Instance is a fully managed SQL Server Database Engine Instance hosted in Azure cloud. This is the best PaaS option for migrating your SQL Server database to cloud. Learn how to create and use Managed Instance with our quickstarts, tutorials, and samples.
+  description: Azure SQL Database Managed Instance is a fully managed SQL Server Database Engine Instance hosted in Azure cloud. This is the best PaaS option for migrating your SQL Server database to the cloud. Learn how to create and use Managed Instance with our quickstarts, tutorials, and samples.
   aside:
     image:
       alt: 
