--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -113,6 +113,10 @@
       href: howto-troubleshoot-common-connection-issues.md
     - name: Troubleshoot query performance
       href: howto-troubleshoot-query-performance.md
+  - name: Restart server
+    items:
+    - name: Azure portal
+      href: howto-restart-server-portal.md
 - name: Reference
   items:
   - name: REST API
