--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -3,7 +3,7 @@
 - name: Overview of Azure Blob storage
   items:
   - name: What is Azure Blob storage?
-    href: 
+    href: storage-blobs-introduction.md
   - name: Choose Blobs, Files, or Data Disks
     href: ../common/storage-decide-blobs-files-disks.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   - name: Switch to Data Lake Storage Gen1 documentation
@@ -77,7 +77,6 @@
   - name: .NET
     href: ../common/storage-samples-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   - name: Java
-   
     href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   - name: Azure PowerShell
     href: storage-samples-blobs-powershell.md 
@@ -155,7 +154,6 @@
     - name: .NET
       href: ../common/storage-samples-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Java
-    
       href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Azure PowerShell
       href: storage-samples-blobs-powershell.md 
