Add API reference to TOC

--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -105,6 +105,10 @@
   items:
   - name: Reports
     items:
+    - name: Audit logs API reference
+      href: https://developer.microsoft.com/graph/docs/api-reference/beta/resources/directoryaudit
+    - name: Sign-in logs API reference
+      href: https://developer.microsoft.com/graph/docs/api-reference/beta/resources/signin
     - name: Audit activities
       href: reference-audit-activities.md
     - name: Data retention policies
