--- a/articles/cognitive-services/Bing-Autosuggest/index.yml
+++ b/articles/cognitive-services/Bing-Autosuggest/index.yml
@@ -6,7 +6,7 @@ metadata:
   title: Bing Autosuggest Documentation - Tutorials, quickstarts, API references | Microsoft Docs
   description: Learn how to use Bing Autosuggest API to obtain suggested queries based on a partial query. Tutorials show you how to build apps that use the service.
   services: cognitive-services
-  author: aahill
+  author: v-jaswel
   manager: kamrani
   ms.service: cognitive-services
   ms.component: bing-autosuggest
@@ -14,7 +14,7 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 10/10/2017
-  ms.author: aahi
+  ms.author: v-jaswel
 abstract:
   description: Bing Autosuggest API lets you send a partial search query term to Bing and get back a list of suggested queries that other users have searched on.  For example, as the user enters each character of their search term, you'd call this API and populate the search box's drop-down list with the suggested query strings. Learn how to use Autosuggest API with our quickstarts, tutorials, and samples.
 sections:
