--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -104,7 +104,7 @@
       href: managed-disks-overview.md
     - name: Disk Types
       href: disks-types.md
-    - name: Defining the common terminology for Azure Disks
+    - name: Common terms for Azure Disks
       href: disks-common-terms.md
     - name: Benchmarks
       href: disks-benchmarks.md
